--- a/ThinkWhat/Modules/Controllers/App/Survey/Create/Poll/Popup content/Topic selection/TopicSelection.xib
+++ b/ThinkWhat/Modules/Controllers/App/Survey/Create/Poll/Popup content/Topic selection/TopicSelection.xib
@@ -9,14 +9,23 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TopicSelection" customModule="ThinkWhat" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TopicSelection" customModule="ThinkWhat" customModuleProvider="target">
+            <connections>
+                <outlet property="back" destination="TPV-dr-35Q" id="6nl-b5-luH"/>
+                <outlet property="cancel" destination="6ST-GV-9dm" id="PqT-RG-Z5b"/>
+                <outlet property="collectionView" destination="FBs-ff-nve" id="ehl-My-M9I"/>
+                <outlet property="confirm" destination="Cjm-jR-w6b" id="pVj-0M-k1H"/>
+                <outlet property="contentView" destination="iN0-l3-epB" id="Lfc-yx-2lS"/>
+                <outlet property="title" destination="Doi-Bf-Pe2" id="NiC-jR-uOm"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="400" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="FBs-ff-nve">
-                    <rect key="frame" x="0.0" y="0.0" width="400" height="480"/>
+                    <rect key="frame" x="0.0" y="81" width="400" height="438"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wUh-Pv-7BH">
                         <size key="itemSize" width="128" height="128"/>
@@ -26,19 +35,19 @@
                     </collectionViewFlowLayout>
                 </collectionView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jc5-Ed-6p1">
-                    <rect key="frame" x="0.0" y="480" width="400" height="120"/>
+                    <rect key="frame" x="0.0" y="519" width="400" height="81"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="checkmark.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Cjm-jR-w6b">
-                            <rect key="frame" x="149" y="9.5" width="102" height="101"/>
+                            <rect key="frame" x="161.5" y="2.5" width="77" height="76"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="Cjm-jR-w6b" secondAttribute="height" multiplier="1:1" id="7oG-lD-67K"/>
                             </constraints>
                         </imageView>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6ST-GV-9dm">
-                            <rect key="frame" x="64.5" y="22" width="76.5" height="76.5"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xmark.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="6ST-GV-9dm">
+                            <rect key="frame" x="96" y="12" width="57.5" height="57"/>
                         </imageView>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.counterclockwise.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="TPV-dr-35Q">
-                            <rect key="frame" x="259" y="22.5" width="76.5" height="75.5"/>
+                            <rect key="frame" x="246.5" y="12" width="57.5" height="57"/>
                         </imageView>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -52,21 +61,31 @@
                         <constraint firstItem="6ST-GV-9dm" firstAttribute="centerY" secondItem="Cjm-jR-w6b" secondAttribute="centerY" id="U5A-P6-H2Q"/>
                         <constraint firstItem="6ST-GV-9dm" firstAttribute="width" secondItem="6ST-GV-9dm" secondAttribute="height" multiplier="1:1" id="V1Y-jp-FjY"/>
                         <constraint firstItem="TPV-dr-35Q" firstAttribute="height" secondItem="Cjm-jR-w6b" secondAttribute="height" multiplier="0.75" id="X4m-AA-r5G"/>
-                        <constraint firstItem="Cjm-jR-w6b" firstAttribute="height" secondItem="jc5-Ed-6p1" secondAttribute="height" multiplier="0.85" id="tRY-O6-EHK"/>
+                        <constraint firstItem="Cjm-jR-w6b" firstAttribute="height" secondItem="jc5-Ed-6p1" secondAttribute="height" multiplier="0.95" id="tRY-O6-EHK"/>
                         <constraint firstItem="Cjm-jR-w6b" firstAttribute="centerY" secondItem="jc5-Ed-6p1" secondAttribute="centerY" id="yfI-8a-RkS"/>
                     </constraints>
                 </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Doi-Bf-Pe2">
+                    <rect key="frame" x="0.0" y="0.0" width="400" height="81"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="Doi-Bf-Pe2" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="18u-eS-2R3"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="jc5-Ed-6p1" secondAttribute="trailing" id="2LM-w4-cVS"/>
                 <constraint firstItem="FBs-ff-nve" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="AdX-sQ-tEr"/>
-                <constraint firstItem="jc5-Ed-6p1" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.2" id="M15-fj-uTE"/>
+                <constraint firstItem="FBs-ff-nve" firstAttribute="top" secondItem="Doi-Bf-Pe2" secondAttribute="bottom" id="JyN-xs-Wpt"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Doi-Bf-Pe2" secondAttribute="trailing" id="KH6-hv-LJv"/>
+                <constraint firstItem="jc5-Ed-6p1" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.135" id="M15-fj-uTE"/>
                 <constraint firstItem="jc5-Ed-6p1" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Qh2-L9-9ad"/>
-                <constraint firstItem="FBs-ff-nve" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="dGe-f8-9ag"/>
                 <constraint firstItem="jc5-Ed-6p1" firstAttribute="top" secondItem="FBs-ff-nve" secondAttribute="bottom" id="dLC-p2-l9k"/>
+                <constraint firstItem="Doi-Bf-Pe2" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="kQ6-rN-fAY"/>
                 <constraint firstItem="jc5-Ed-6p1" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="mKW-Hy-lK2"/>
+                <constraint firstItem="Doi-Bf-Pe2" firstAttribute="height" secondItem="jc5-Ed-6p1" secondAttribute="height" id="mQw-Co-poV"/>
                 <constraint firstItem="FBs-ff-nve" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="t3l-kv-lga"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -76,6 +95,7 @@
     <resources>
         <image name="arrow.counterclockwise.circle" catalog="system" width="128" height="121"/>
         <image name="checkmark.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="xmark.circle" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
