--- a/ThinkWhat/Modules/Controllers/App/Topics/Cells/CategoryCollectionViewCell.xib
+++ b/ThinkWhat/Modules/Controllers/App/Topics/Cells/CategoryCollectionViewCell.xib
@@ -15,35 +15,54 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="category" id="gTV-IL-0wX" customClass="CategoryCollectionViewCell" customModule="ThinkWhat" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="100" height="130"/>
+            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="100" height="130"/>
+                <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0LY-59-bgI" customClass="ArcLabel" customModule="ThinkWhat" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                        <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="10"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lxC-cQ-Ivs" customClass="ArcLabel" customModule="ThinkWhat" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                        <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="10"/>
+                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="angle">
+                                <real key="value" value="4.6699999999999999"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="clockwise" value="NO"/>
+                        </userDefinedRuntimeAttributes>
+                    </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hbk-PG-lQe" customClass="Icon" customModule="ThinkWhat" customModuleProvider="target">
-                        <rect key="frame" x="15" y="0.0" width="70" height="70"/>
+                        <rect key="frame" x="30" y="30" width="90" height="90"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="Hbk-PG-lQe" secondAttribute="height" multiplier="1:1" id="bwb-iE-bo2"/>
                         </constraints>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0LY-59-bgI">
-                        <rect key="frame" x="0.0" y="78" width="100" height="14"/>
-                        <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="10"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
             </view>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="Hbk-PG-lQe" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="05j-4d-VuV"/>
-                <constraint firstItem="Hbk-PG-lQe" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="3hJ-O8-zky"/>
-                <constraint firstItem="Hbk-PG-lQe" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="0.7" id="EYm-nV-imI"/>
+                <constraint firstItem="Hbk-PG-lQe" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="0.6" id="EYm-nV-imI"/>
                 <constraint firstItem="0LY-59-bgI" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="EhL-WT-Azo"/>
+                <constraint firstItem="lxC-cQ-Ivs" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="G4X-Py-aNs"/>
+                <constraint firstAttribute="bottom" secondItem="0LY-59-bgI" secondAttribute="bottom" id="IGg-7N-2jp"/>
                 <constraint firstAttribute="trailing" secondItem="0LY-59-bgI" secondAttribute="trailing" id="RIC-jm-e5V"/>
-                <constraint firstItem="0LY-59-bgI" firstAttribute="top" secondItem="Hbk-PG-lQe" secondAttribute="bottom" constant="8" id="Sex-a9-VXo"/>
+                <constraint firstAttribute="trailing" secondItem="0LY-59-bgI" secondAttribute="trailing" id="T1C-Eg-N3T"/>
+                <constraint firstItem="Hbk-PG-lQe" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="Xz6-bt-IEe"/>
+                <constraint firstAttribute="bottom" secondItem="lxC-cQ-Ivs" secondAttribute="bottom" id="aUG-vP-5rQ"/>
+                <constraint firstAttribute="trailing" secondItem="lxC-cQ-Ivs" secondAttribute="trailing" id="eQb-Ze-ofG"/>
+                <constraint firstItem="lxC-cQ-Ivs" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="lf3-vC-JFd"/>
+                <constraint firstItem="0LY-59-bgI" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="wkh-Co-GeS"/>
+                <constraint firstItem="0LY-59-bgI" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="xWK-dP-FgM"/>
             </constraints>
             <size key="customSize" width="100" height="130"/>
             <userDefinedRuntimeAttributes>
@@ -53,10 +72,16 @@
             </userDefinedRuntimeAttributes>
             <connections>
                 <outlet property="constraint" destination="EYm-nV-imI" id="eBW-dh-FNs"/>
+                <outlet property="count" destination="lxC-cQ-Ivs" id="8Tc-ed-hEf"/>
                 <outlet property="icon" destination="Hbk-PG-lQe" id="8RO-oJ-W1t"/>
                 <outlet property="title" destination="0LY-59-bgI" id="xDQ-Y1-BGc"/>
             </connections>
-            <point key="canvasLocation" x="140.80000000000001" y="161.91904047976013"/>
+            <point key="canvasLocation" x="140.57971014492756" y="161.38392857142856"/>
         </collectionViewCell>
     </objects>
+    <designables>
+        <designable name="lxC-cQ-Ivs">
+            <size key="intrinsicContentSize" width="26.5" height="14"/>
+        </designable>
+    </designables>
 </document>
