--- a/ThinkWhat/Modules/Controllers/App/Survey/Create/Poll/PollCreationView.xib
+++ b/ThinkWhat/Modules/Controllers/App/Survey/Create/Poll/PollCreationView.xib
@@ -44,6 +44,7 @@
                 <outlet property="pollImagesButton" destination="7oT-XB-JmG" id="gUe-Zd-7Fy"/>
                 <outlet property="pollImagesContainerView" destination="LmY-Fe-ZcH" id="2Ke-tW-e0J"/>
                 <outlet property="pollImagesFg" destination="KUi-zY-eg2" id="3Tp-93-Twv"/>
+                <outlet property="pollImagesHeight" destination="YDB-1V-ViU" id="Tvs-SD-pCZ"/>
                 <outlet property="pollImagesSkip" destination="tqp-mz-7hf" id="F0c-PG-CpQ"/>
                 <outlet property="pollImagesStaticLabel" destination="LuK-wg-NiR" id="Qms-pN-tEV"/>
                 <outlet property="pollImagesTemp" destination="GVI-mX-WUB" id="Rkn-1R-lv5"/>
@@ -493,7 +494,7 @@
                                                     <constraints>
                                                         <constraint firstItem="tqp-mz-7hf" firstAttribute="centerX" secondItem="GVI-mX-WUB" secondAttribute="centerX" id="Ip0-g9-jqu"/>
                                                         <constraint firstItem="tqp-mz-7hf" firstAttribute="height" secondItem="GVI-mX-WUB" secondAttribute="height" multiplier="0.807692" id="Nlp-dA-182"/>
-                                                        <constraint firstAttribute="height" constant="52" identifier="height" id="dXg-gH-c6s"/>
+                                                        <constraint firstAttribute="height" constant="52" identifier="supp_height" id="dXg-gH-c6s"/>
                                                         <constraint firstItem="tqp-mz-7hf" firstAttribute="centerY" secondItem="GVI-mX-WUB" secondAttribute="centerY" id="g8b-Xy-oMm"/>
                                                     </constraints>
                                                 </view>
@@ -501,7 +502,7 @@
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="LmY-Fe-ZcH" secondAttribute="trailing" id="3tK-L0-yy6"/>
-                                                <constraint firstItem="LmY-Fe-ZcH" firstAttribute="bottom" secondItem="GVI-mX-WUB" secondAttribute="top" id="CrA-Y0-dpN"/>
+                                                <constraint firstItem="LmY-Fe-ZcH" firstAttribute="bottom" secondItem="GVI-mX-WUB" secondAttribute="top" priority="999" id="CrA-Y0-dpN"/>
                                                 <constraint firstItem="LmY-Fe-ZcH" firstAttribute="leading" secondItem="KUi-zY-eg2" secondAttribute="leading" id="QvM-sB-byQ"/>
                                                 <constraint firstAttribute="trailing" secondItem="GVI-mX-WUB" secondAttribute="trailing" id="Zjg-fj-pGi"/>
                                                 <constraint firstItem="LmY-Fe-ZcH" firstAttribute="top" secondItem="KUi-zY-eg2" secondAttribute="top" id="c1M-IE-y7d"/>
@@ -513,6 +514,7 @@
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="KUi-zY-eg2" secondAttribute="trailing" id="Bte-DX-A7I"/>
+                                        <constraint firstAttribute="height" constant="224" identifier="height" id="YDB-1V-ViU"/>
                                         <constraint firstItem="KUi-zY-eg2" firstAttribute="leading" secondItem="Oya-vv-a9d" secondAttribute="leading" id="aWk-00-pe0"/>
                                         <constraint firstAttribute="bottom" secondItem="KUi-zY-eg2" secondAttribute="bottom" id="bIc-aa-pno"/>
                                         <constraint firstItem="KUi-zY-eg2" firstAttribute="top" secondItem="Oya-vv-a9d" secondAttribute="top" id="gdz-IR-r9z"/>
@@ -650,16 +652,16 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ApG-tU-UvF">
-                                    <rect key="frame" x="124" y="3492.5" width="166" height="165.5"/>
+                                    <rect key="frame" x="124" y="3492.5" width="166" height="166"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TTz-Fj-Hy0" customClass="ArcLabel" customModule="ThinkWhat" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="166" height="165.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="166" height="166"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fzQ-9l-9Fa" customClass="ArcLabel" customModule="ThinkWhat" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="166" height="165.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="166" height="166"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -671,7 +673,7 @@
                                             </userDefinedRuntimeAttributes>
                                         </label>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QmI-tE-6ep" customClass="CircleButton" customModule="ThinkWhat" customModuleProvider="target">
-                                            <rect key="frame" x="29" y="29" width="108" height="107.5"/>
+                                            <rect key="frame" x="29" y="29" width="108" height="108"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="QmI-tE-6ep" secondAttribute="height" multiplier="1:1" id="MW2-0c-snI"/>
@@ -753,7 +755,6 @@
                                 <constraint firstItem="ApG-tU-UvF" firstAttribute="centerX" secondItem="O6h-Th-32g" secondAttribute="centerX" id="x3d-58-MeY"/>
                                 <constraint firstItem="Ypb-aX-MKU" firstAttribute="centerX" secondItem="O6h-Th-32g" secondAttribute="centerX" id="x95-dM-Xpz"/>
                                 <constraint firstItem="1e2-v2-fdz" firstAttribute="top" secondItem="vmV-Ua-SpT" secondAttribute="bottom" constant="60" id="xfM-4A-TrD"/>
-                                <constraint firstItem="Oya-vv-a9d" firstAttribute="width" secondItem="Oya-vv-a9d" secondAttribute="height" multiplier="10:6" id="xk8-aY-f03"/>
                                 <constraint firstItem="Oya-vv-a9d" firstAttribute="width" secondItem="O6h-Th-32g" secondAttribute="width" multiplier="0.900966" id="zFE-bZ-oW1"/>
                                 <constraint firstItem="ApG-tU-UvF" firstAttribute="width" secondItem="VRA-b6-zQH" secondAttribute="width" id="zgP-Bl-nJN"/>
                                 <constraint firstItem="gC1-0M-MJz" firstAttribute="width" secondItem="gC1-0M-MJz" secondAttribute="height" multiplier="10:4" id="zwe-QH-g3U"/>
